--- a/shared/latex/en/supervised/trees-details.tex
+++ b/shared/latex/en/supervised/trees-details.tex
@@ -1,25 +1,25 @@
-\begin{frame}{Évaluation de la qualité d'un split}
-  En fonction de la tâche~:
+\begin{frame}{Split quality evaluation}
+  Depending on the task:
   \begin{description}
-  \item[Régression] Coût si on rendait la moyenne des instances comme résultat~:
+  \item[Régression] Cost using the mean value of the leaf samples:
     \[
-      \text{Erreur} = \sum|\overline{y}-y| \approx variance
+      \text{Loss} = \sum|\overline{y}-y| \approx variance
     \]
-  \item[Classification] Entropie de Shannon :
+  \item[Classification] Shannon's entropy :
     \[
-      \text{Erreur} = -\sum_{x \in X}P_x\log_2(P_x)
+      \text{Loss} = -\sum_{x \in X}P_x\log_2(P_x)
     \]
     \begin{itemize}
-      \item Minimale il n'y a pas d'incertitude
-      \item Maximale quand il y a le maximum d'incertitude (distribution uniforme)
+      \item Minimal when there is no uncertainty
+      \item Maximum when uncertainty is maximale (uniform distribution)
     \end{itemize}
   \end{description}
 \end{frame}
 
-\begin{frame}{Exemple — Démarrage}
+\begin{frame}{Example — Start}
   \begin{columns}
     \begin{column}{.5\textwidth}
-      ID, jardinage, jeux vidéos, chapeaux, âge
+      ID, gardening, video games, hat, age
       \[
         \begin{bmatrix}
           1 & 0 & 1 & 1 & 13  \\
@@ -35,7 +35,7 @@
       \]
     \end{column}
     \begin{column}{.5\textwidth}
-      Première étape : création du nœud de départ
+      Step 1: Create the first node
       \\[1cm]
       \begin{forest}
         [{1, 2, 3, 4, 5, 6, 7, 8, 9} [{}]]
@@ -44,10 +44,10 @@
   \end{columns}
 \end{frame}
 
-\begin{frame}{Exemple — Test du split jardinage}
+\begin{frame}{Example — Test to split on gardening}
   \begin{columns}
     \begin{column}{.5\textwidth}
-      ID, jardinage, jeux vidéos, chapeaux, âge
+      ID, gardening, video games, hat, age
       \[
         \begin{bmatrix}
           1 & 0 & 1 & 1 & 13  \\
@@ -63,28 +63,27 @@
       \]
     \end{column}
     \begin{column}{.5\textwidth}
-      Split du premier nœud. Il faut tester 3 splits. Split sur
-      jardinage~:
+      First node split. We need to test the 3 possible splits. Split on gardening:
       \\[1cm]
       \begin{forest}
         [{1, 2, 3, 4, 5, 6, 7, 8, 9}
           [{4, 6, 7, 8, 9},
-          edge label={node[midway,left,font=\scriptsize]{jardinage}}
+          edge label={node[midway,left,font=\scriptsize]{gardening}}
             [{$\overline{y} = 57,2$} [{$E = 80,8$}]]]
           [{1, 2, 3, 5},
-          edge label={node[midway,right,font=\scriptsize]{$\neg$ jardinage}}
+          edge label={node[midway,right,font=\scriptsize]{$\neg$ gardening}}
             [{$\overline{y} = 19,25$} [{$E = 31,5$}]]]
         ]
       \end{forest}\\
-      Erreur totale~: $112,3$
+      Total loss: $112,3$
     \end{column}
   \end{columns}
 \end{frame}
 
-\begin{frame}{Exemple — Test du split jeux vidéos}
+\begin{frame}{Example — Test to split on video games}
   \begin{columns}
     \begin{column}{.5\textwidth}
-      ID, jardinage, jeux vidéos, chapeaux, âge
+      ID, gardening, video games, hat, age
       \[
         \begin{bmatrix}
           1 & 0 & 1 & 1 & 13  \\
@@ -100,28 +99,27 @@
       \]
     \end{column}
     \begin{column}{.5\textwidth}
-      Split du premier nœud. Il faut tester 3 splits. Split sur
-      jeux vidéos~:
+      First node split. We need to test the 3 possible splits. Split on video games:
       \\[1cm]
       \begin{forest}
         [{1, 2, 3, 4, 5, 6, 7, 8, 9}
           [{1, 2, 3, 4, 5, 7},%
-          edge label={node[midway,left,font=\scriptsize]{jeux vidéos}}
+          edge label={node[midway,left,font=\scriptsize]{video games}}
             [{$\overline{y} = 28,3$} [{$E = 92,6$}]]]
           [{6, 8, 9},
-          edge label={node[midway,right,font=\scriptsize]{$\neg$ jeux vidéos}}
+          edge label={node[midway,right,font=\scriptsize]{$\neg$ video games}}
             [{$\overline{y} = 64,3$} [{$E = 30,7$}]]]
         ]
       \end{forest}\\
-      Erreur totale~: $123,3$
+      Total loss: $123,3$
     \end{column}
   \end{columns}
 \end{frame}
 
-\begin{frame}{Exemple — Test du split chapeaux}
+\begin{frame}{Example — Test to split on hat}
   \begin{columns}
     \begin{column}{.5\textwidth}
-      ID, jardinage, jeux vidéos, chapeaux, âge
+      ID, gardening, video games, hat, age
       \[
         \begin{bmatrix}
           1 & 0 & 1 & 1 & 13  \\
@@ -137,28 +135,27 @@
       \]
     \end{column}
     \begin{column}{.5\textwidth}
-      Split du premier nœud. Il faut tester 3 splits. Split sur
-      chapeaux~:
+      First node split. We need to test the 3 possible splits. Split on hat:
       \\[1cm]
       \begin{forest}
         [{1, 2, 3, 4, 5, 6, 7, 8, 9}
           [{1, 4, 5, 7, 9},%
-          edge label={node[midway,left,font=\scriptsize]{chapeaux}}
+          edge label={node[midway,left,font=\scriptsize]{hat}}
             [{$\overline{y} = 42,8$} [{$E = 110,8$}]]]
           [{2, 3, 6, 8},
-          edge label={node[midway,right,font=\scriptsize]{$\neg$ chapeaux}}
+          edge label={node[midway,right,font=\scriptsize]{$\neg$ hat}}
             [{$\overline{y} = 37,25$} [{$E = 91$}]]]
         ]
       \end{forest}\\
-      Erreur totale~: $201,8$
+      Total loss: $201,8$
     \end{column}
   \end{columns}
 \end{frame}
 
-\begin{frame}{Exemple — Sélection du meilleur split}
+\begin{frame}{Example — Select the best split}
   \begin{columns}
     \begin{column}{.5\textwidth}
-      ID, jardinage, jeux vidéos, chapeaux, âge
+      ID, gardening, video games, hat, age
       \[
         \begin{bmatrix}
           1 & 0 & 1 & 1 & 13  \\
@@ -175,19 +172,19 @@
     \end{column}
     \begin{column}{.5\textwidth}
       \begin{description}
-        \item[112,3] jardinage
-        \item[123,3] jeux vidéos
-        \item[201,8] chapeaux
+        \item[112,3] gardening
+        \item[123,3] video games
+        \item[201,8] hat
       \end{description}
-      → On split donc sur jardinage
+      → gardening will be used for spliting
     \end{column}
   \end{columns}
 \end{frame}
 
-\begin{frame}{Exemple — split}
+\begin{frame}{Example — split}
   \begin{columns}
     \begin{column}{.5\textwidth}
-      ID, jardinage, jeux vidéos, chapeaux, âge
+      ID, gardening, video games, hat, age
       \[
         \begin{bmatrix}
           1 & 0 & 1 & 1 & 13  \\
@@ -203,29 +200,29 @@
       \]
     \end{column}
     \begin{column}{.5\textwidth}
-      Résultat après le premier split~:\\[1cm]
+      Result after the first split:\\[1cm]
 
       \begin{forest}
         [{1, 2, 3, 4, 5, 6, 7, 8, 9}
           [{4, 6, 7, 8, 9},
-          edge label={node[midway,left,font=\scriptsize]{jardinage}}]
+          edge label={node[midway,left,font=\scriptsize]{gardening}}]
           [{1, 2, 3, 5},
-          edge label={node[midway,right,font=\scriptsize]{$\neg$ jardinage}}]
+          edge label={node[midway,right,font=\scriptsize]{$\neg$ gardening}}]
         ]
       \end{forest}\\[1cm]
 
-      À vous de jouer !
+      Now it's your turn!
     \end{column}
   \end{columns}
 \end{frame}
 
-\begin{frame}{Limiter l'overfit}
-  Fait par~:
+\begin{frame}{Limit overfiting}
+  overfiting can be managed using specific:
   \begin{itemize}
-    \item Profondeur maximum
-    \item Nombre minimum d'instances dans chaque feuille
-    \item Baisse d'entropie au dessus d'un minimum à chaque split
-    \item Nombre minimum d'instances pour split
-    \item Élagage
+    \item Maximum depth
+    \item Minimum number of instances in each leaf
+    \item Minumum entropy drop at each split
+    \item Minimum number of instances for split
+    \item Pruning
   \end{itemize}
 \end{frame}
