--- a/shared/latex/en/supervised/demo-sklearn-random-forest.tex
+++ b/shared/latex/en/supervised/demo-sklearn-random-forest.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Démonstration \texttt{sklearn}}
+\begin{frame}{\texttt{sklearn} example}
   \bluelink{https://colab.research.google.com/drive/1zVDe4ZdTZngGHFtI1c7Ky52WTJDWLTv2\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
